fixed banner spacing issues for *most* device sizes

--- a/src/components/CSS/Header.css
+++ b/src/components/CSS/Header.css
@@ -1,10 +1,13 @@
 
 .titleFont {
-    font-size: 8vw;
+    font-size: clamp(40px, 8vw, 120px);
 }
 
 .brace-image {
-    height: 12vw;
+    max-height: 100%;
+    position: absolute;
+    height: inherit;
+    width: auto;
     margin: 0;
     padding: 0;
 }
@@ -16,12 +19,12 @@
 }
 
 .titleFont2 {
-    font-size: max(2vw, 25px);
+    font-size: clamp(25px, 2vw, 40px);
     width: auto;
 }
 
 .titleFont3 {
-    font-size: 0.8vw;
+    font-size: 12px;
     width: auto;
 }
 
@@ -55,7 +58,7 @@
     height: "100%";
     left: "50%";
     top: "50%";
-    transform: "translate(-50%, -50%)";
+    /* transform: "translate(-50%, -50%)"; */
     background:
         linear-gradient(
         rgba(0, 0, 0, 0.7), 
@@ -69,9 +72,9 @@
     background-repeat: no-repeat;
     margin: 0;
     padding: 0;
-    min-width: 100vw;
-    height: 95vh;
-
+    min-width: 100%;
+    height: 95%;
+    background-position: center;
 }
 
 .mask {
@@ -82,12 +85,9 @@
     height: 100%;
 }
 
-.curly-brace {
-    font-size: 15em;
-    font-weight: lighter;
-    color: rgb(248, 249, 250);
-    padding: 0;
-    margin: 0;
-    line-height: 100%;
-    margin-top:-10%;
+.middle-row {
+    max-height: 300px;
+    min-height: 210px;
+    height: auto;
+    width: 100%;
 }
